--- a/packages.config
+++ b/packages.config
@@ -17,6 +17,10 @@
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.4" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net472" />
+  <package id="Microsoft.AspNet.SignalR" version="2.4.3" targetFramework="net472" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.4.3" targetFramework="net472" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="2.4.3" targetFramework="net472" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.4.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net472" />
