--- a/CinemaWeb.csproj
+++ b/CinemaWeb.csproj
@@ -242,11 +242,13 @@
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
     <Compile Include="Areas\Admin\Controllers\AdminHomeController.cs" />
     <Compile Include="Areas\Admin\Controllers\InvoiceController.cs" />
-    <Compile Include="Areas\Admin\Controllers\MovieController.cs" />
+    <Compile Include="Areas\Admin\Controllers\MoviesController.cs" />
     <Compile Include="Areas\Admin\Controllers\RevenueController.cs" />
     <Compile Include="Areas\Admin\Controllers\ScheduleController.cs" />
     <Compile Include="Areas\Admin\Controllers\StaffController.cs" />
+    <Compile Include="Areas\Admin\Controllers\UpLoadController.cs" />
     <Compile Include="Areas\Admin\Controllers\UserController.cs" />
+    <Compile Include="Areas\Admin\Helper\ImageHelper.cs" />
     <Compile Include="Areas\Staff\Controllers\StaffHomeController.cs" />
     <Compile Include="Areas\Staff\Controllers\StaffProfileController.cs" />
     <Compile Include="Areas\Staff\StaffAreaRegistration.cs" />
@@ -1660,11 +1662,6 @@
     <Content Include="Areas\Admin\Views\AdminHome\InvoiceList.cshtml" />
     <Content Include="Areas\User\Views\BookTicket\ActorList.cshtml" />
     <Content Include="Areas\User\Views\BookTicket\ActorDetail.cshtml" />
-    <Content Include="Areas\Admin\Views\Movie\Create.cshtml" />
-    <Content Include="Areas\Admin\Views\Movie\Delete.cshtml" />
-    <Content Include="Areas\Admin\Views\Movie\Details.cshtml" />
-    <Content Include="Areas\Admin\Views\Movie\Edit.cshtml" />
-    <Content Include="Areas\Admin\Views\Movie\Index.cshtml" />
     <Content Include="FE_Q\images - Shortcut %282%29.lnk" />
     <Content Include="FE_Q\images - Shortcut.lnk" />
     <Content Include="Areas\User\Views\BookTicket\BestMovie.cshtml" />
@@ -1687,6 +1684,11 @@
     <Content Include="Areas\Admin\Views\Staff\StaffList.cshtml" />
     <Content Include="Areas\Admin\Views\User\UserList.cshtml" />
     <Content Include="Areas\Admin\Views\Revenue\OveralRevenue.cshtml" />
+    <Content Include="Areas\Admin\Views\Movies\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\Movies\Delete.cshtml" />
+    <Content Include="Areas\Admin\Views\Movies\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\Movies\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\Movies\Index.cshtml" />
     <None Include="Properties\PublishProfiles\hothanhhuy2004-001-site1 - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\hothanhhuy2004-001-site1 - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\thanhhuy2004-001-site1 - Web Deploy.pubxml" />
@@ -2525,6 +2527,7 @@
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Views\Invoice\" />
+    <Folder Include="Areas\Admin\Views\UpLoad\" />
     <Folder Include="Areas\Staff\Data\" />
     <Folder Include="Areas\User\assets\fonts\" />
     <Folder Include="Areas\User\Data\" />
