--- a/Web.config
+++ b/Web.config
@@ -31,6 +31,7 @@
     <!--<add key="vnp_Returnurl" value="http://hothanhhuy2004-001-site1.btempurl.com/User/BookTicket/VnPayReturn" />-->
   </appSettings>
   <system.web>
+	  <globalization fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" />
 	<sessionState mode="InProc" />
     <authentication mode="None" />
     <customErrors mode="Off" />
